--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,10 +88,15 @@ a {
   padding: 1.5rem 2rem;
   border-radius: 1rem;
   overflow: hidden;
-  background-color: #ffe8df !important;
+  background-color: #ffe8df ;
 }
 .banner .card__img {
   width: 380px;
+}
+.banner .card__img:hover{
+    transform: scale(1.3);
+    /* transform: rotate(60deg); */
+
 }
 .banner .card__precis {
   width: 20%;
@@ -116,11 +121,16 @@ a {
 .banner .card__precis button {
   font-size: 1.5rem !important;
   border: none;
+  border-radius: 20px;
   background-color: #161616;
   color: #fff;
   padding: .9rem 3rem;
   width: 100%;
   cursor: pointer;
+}
+.banner .card__precis button:hover{
+  background-color: rgb(255, 236, 31);
+  color: #161616;
 }
 
 .banner .card__name {
